--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
         "sass-loader": "^7.1.0",
         "tailwindcss": "^1.0.3",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.14"
+        "vue-router": "^3.0.5",
+        "vue-template-compiler": "^2.6.14",
+        "vuex": "^3.1.0"
+    },
+    "dependencies": {
+        "vue-sweetalert2": "^5.0.2"
     }
 }
