--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vuex": "^3.1.0"
     },
     "dependencies": {
+        "vue-star-rating": "^1.7.0",
         "vue-sweetalert2": "^5.0.2"
     }
 }
