--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
         "vuex": "^3.1.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.3.0",
+        "@fortawesome/free-regular-svg-icons": "^6.0.0",
+        "@fortawesome/free-solid-svg-icons": "^6.0.0",
+        "@fortawesome/vue-fontawesome": "^2.0.6",
+        "laravel-vue-pagination": "^2.2.0",
         "vue-star-rating": "^1.7.0",
         "vue-sweetalert2": "^5.0.2"
     }
