--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
-    "devDependencies": {
+    "dependencies": {
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
@@ -24,9 +24,7 @@
         "vue": "^2.5.17",
         "vue-router": "^3.0.5",
         "vue-template-compiler": "^2.6.14",
-        "vuex": "^3.1.0"
-    },
-    "dependencies": {
+        "vuex": "^3.1.0",
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-regular-svg-icons": "^6.0.0",
         "@fortawesome/free-solid-svg-icons": "^6.0.0",
